@@ -11,7 +11,7 @@ Major code and design
 Richard Boulton (lead developer)
 Tom Mortimer (highlighting and summarisation)
 Tom Winch (facet heirarchy)
-Paul Rudin (range acceleration terms)
+Paul Rudin (range acceleration terms, difference search)
 
 
 Thanks are due to MyDeco (http://mydeco.com/) who have supported much of the
